kube-files/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      name: client-pod
      labels:
        component: web
    spec:
      containers:
        - image: srinux27/fib-client:latest
          name: client
          ports:
            - containerPort: 3000
