kube-files/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels: 
      component: server
  template:
    metadata:
      name: server-pod
      labels:
        component: server
    spec:
      containers:
        - image: srinux27/fib-server:latest
          name: api
          ports:
            - containerPort: 5000
