kube-files/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      name: worker-pod
      labels:
        component: worker
    spec:
      containers:
        - image: srinux27/fib-worker:latest
          name: worker
