kube-files/client-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    component: web
