kube-files/postgres-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip
spec:
  type: ClusterIP
  ports:
    - targetPort: 5432
      port: 5432
  selector:
    component: postgres
