kube-files/redis-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip
spec:
  type: ClusterIP
  ports:
    - targetPort: 6379
      port: 6379
  selector:
    component: redis
