kube-files/server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip
spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000
  selector: 
    component: server
